--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1" ### AWS region of your choice
-  app: "sample-docker-react" ### Your EB App name
-  env: "Sampledockerreact-env" ### Your EB App environment name
+  app: "my-app" ### Your EB App name
+  env: "Myapp-env" ### Your EB App environment name
   bucket_name: "elasticbeanstalk-us-east-1-366423825935" ### S3 bucket name
   bucket_path: "EBApptest" ### S3 folder name under S3 bucket above
   on:
