--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ node_js:
 services: 
     - docker
 before_install: 
-    - docker build -t EricJobs3/my-app -f Dockerfile.dev .
+    - docker build -t ericjobs3/my-app -f Dockerfile.dev .
 script:     
-    - docker run -e CI=true EricJobs3/my-app npm run test -- --coverage --watchAll=false
+    - docker run -e CI=true ericjobs3/my-app npm run test -- --coverage --watchAll=false
 
 deploy:
   provider: elasticbeanstalk
